# flipsaver

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
docs/: BUILDING.md  manual-test-matrix.md
docs/superpowers/plans/: 2026-07-06-flipsaver-v0.1.md  2026-07-06-vertical-clock.md
scripts/: deploy.sh
src/: board.rs  clock.rs  config.rs  fontsel.rs  main.rs  screensaver.rs  settings.rs  tz.rs
