[package]
name = "flipsaver"
version = "0.1.0"
edition = "2021"

# panic="abort" is release-only: dev/test profiles keep unwinding so
# `cargo test` on the Linux host works.
[build-dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
] }
windows-numerics = "0.2"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
